<resources>
    <string name="app_name">EC2_DAM1</string>

    <!--menu principal-->
    <string name="valbtnregistro">Registro</string>
    <string name="valbtnformulario">Formulario</string>
    <string name="valbtnlistado">Listado</string>

    <!--formulario registro-->
    <string name="txtinformacion">Información</string>
    <string name="valetdni">Dni</string>
    <string name="valetnombre">Nombre</string>
    <string name="valetapellidos">Apellidos</string>
    <string name="valetemail">Email</string>
    <string name="valetpassword">Password</string>

    <string name="txtSexo">Sexo:</string>
    <string name="valrbhombre">Hombre</string>
    <string name="valrbmujer">Mujer</string>

    <string name="txthobbies">Hobbies:</string>
    <string name="valcbdeporte">Deporte</string>
    <string name="valcbpintura">Pintura</string>
    <string name="valcbotro">Otro:</string>
    <string name="valetotro">Ingrese otro hobby</string>

    <string name="valbtnacceder">Acceder</string>

    <string name="txtlistadoregistro">Listado de Personas</string>
    <string name="reg_dni">dni</string>
    <string name="reg_nom_ap">nombre y apellidos</string>
    <string name="reg_gen">genero</string>
    <string name="reg_hobbie">hobbie</string>
    <string name="reg_email">email</string>
    <string name="reg_pass">password</string>

    <!---->
    <string name="txtcuestionario">"CUESTIONARIO COVID-19 "</string>
    <string name="txtpregunta1">1. Marca tus síntomas</string>
    <string name="txtpregunta2">2. ¿Tienes fiebre mayor a 37 grados?</string>
    <string name="txtpregunta3">3. ¿Vives solo en casa?</string>
    <string name="txtpregunta4">4. ¿Vives con un adulto mayor en casa?</string>
    <string name="txtpregunta5">5. ¿Cuentas con los siguientes servicios en casa?</string>
    <string name="valcbsintoma1">Disminución del gusto o el olfato</string>
    <string name="valcbsintoma2">Tos</string>
    <string name="valcbsintoma3">Dolor de garganta</string>
    <string name="valcbsintoma4">Congestión nasal</string>
    <string name="valcbsintoma5">Fiebre</string>
    <string name="valcbsintoma6">Ninguno</string>
    <string name="valrbopcion1">Sí</string>
    <string name="valrbopcion2">No</string>
    <string name="valcbservicio1">Luz</string>
    <string name="valcbservicio2">Agua</string>
    <string name="valcbservicio3">Internet</string>
    <string name="valcbservicio4">Cable</string>
    <string name="valbtnresolver">Resolver</string>
    <string name="txtlibros">LIBROS DE MEDICINA</string>

    <string name="txtlistadocuestionario">LISTA DE RESPUESTAS AL CUESTIONARIO</string>
</resources>